@@ -1,3 +1,12 @@
+Mon Jul 19 00:31:54 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* libgnomevfs/xdgmime*: Sync from upstream; add the
+	register_callback function.
+
+Sun Jul 18 22:53:39 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* libgnomevfs/gnome-vfs-mime.c: remove mime_dir_source_t
+
 2004-07-18  Ray Strode  <rstrode@redhat.com>
 
 	* libgnomevfs/gnome-vfs-mime-handlers.c:
